# ChatApp

./: Assets.qrc  CMakeLists.txt  Main.qml  main.cpp
Components/Buttons/: IconButton_01.qml  qmldir
Components/Contact/: ContactRow_01.qml  qmldir
Components/Screens/: ChatScreen_01.qml  ContactListScreen_01.qml  ScreenContainer_01.qml  SettingScreen_01.qml  qmldir
Controlles/: database.cpp  database.h
